<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/budgetNameTextInComponent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/budget_name_label"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/budgetExceededChip" />

        <TextView
            android:id="@+id/viewBudgetNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/textColor"
            android:layout_marginHorizontal="16dp"
            android:text="BudgetName???????????????"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/budgetNameTextInComponent" />

        <TextView
            android:id="@+id/budgetCategoryTextInComponent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/category"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/viewBudgetNameText" />

        <TextView
            android:id="@+id/viewBudgetCategoryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/textColor"
            android:layout_marginHorizontal="16dp"
            android:text="Entertainment"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/budgetCategoryTextInComponent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/viewBudgetProgressBarRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingVertical="16dp"
            android:progress="80"
            app:indicatorSize="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:trackColor="@color/progressBarAtFirst"
            app:trackCornerRadius="10dp"
            app:trackThickness="8dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/budgetRemainingChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/budget_within_limit"
            android:padding="16dp"
            android:visibility="invisible"
            android:drawableStart="@drawable/good"
            android:drawablePadding="8dp"
            android:drawableTint="@color/progressIndicatorLeisure"
            android:gravity="center"
            android:text="@string/budget_within_limit_info"
            android:textColor="@color/progressIndicatorLeisure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewBudgetProgressBarRecycler" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/budgetThresholdChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/budget_threshold_shape"
            android:padding="16dp"
            android:drawableStart="@drawable/nearing"
            android:drawablePadding="8dp"
            android:drawableTint="@color/progressIndicatorDanger"
            android:gravity="center"
            android:text="@string/budget_reached_threshold_info"
            android:visibility="invisible"
            android:textColor="@color/progressIndicatorDanger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewBudgetProgressBarRecycler" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/budgetExceededChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/budget_exceeded_shape"
            android:padding="16dp"
            android:text="@string/budget_exceeded_info"
            android:textColor="@color/progressIndicatorExceeded"
            android:drawableStart="@drawable/exceeded"
            android:drawablePadding="8dp"
            android:drawableTint="@color/progressIndicatorExceeded"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewBudgetProgressBarRecycler" />

        <TextView
            android:id="@+id/budgetAmountTextInComponent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/budget_amount_label"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/viewBudgetCategoryText" />
        <include
            android:id="@+id/viewBudgetAmountText"
            layout="@layout/amount_text_view_component"
            android:layout_width="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/budgetAmountTextInComponent" />

        <TextView
            android:id="@+id/spentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/spent_amount_label"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/viewBudgetAmountText" />
        <include
            android:id="@+id/viewSpentAmountText"
            layout="@layout/amount_text_view_component"
            android:layout_width="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/spentText" />

        <TextView
            android:id="@+id/viewRemainsText"
            android:layout_width="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/remains_recycler_item"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/viewSpentAmountText" />

        <include
            android:id="@+id/viewRemainingAmountText"
            layout="@layout/amount_text_view_component"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="@id/constraintLayout"
            app:layout_constraintStart_toStartOf="@id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@id/viewRemainsText" />

        <TextView
            android:id="@+id/viewBudgetPercentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewBudgetProgressBarRecycler"
            app:layout_constraintEnd_toEndOf="@+id/viewBudgetProgressBarRecycler"
            app:layout_constraintStart_toStartOf="@+id/viewBudgetProgressBarRecycler"
            app:layout_constraintTop_toTopOf="@+id/viewBudgetProgressBarRecycler" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
