<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/recordPage"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddBudgetFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/app_bar_add_budget"
        android:background="?android:attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:id="@+id/toolbar_add_budget"
            app:title="Add Budget"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/baseline_close_24"
            app:navigationIconTint="@color/white"
            android:layout_height="match_parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollViewAddBudget"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/HeadingTextStyle"
                        android:paddingEnd="5dp"
                        android:text="@string/budget_name_label"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/asterisk"
                        android:textSize="16sp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:textColor="@color/expenseColour"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/budgetNameTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        style="@style/TextStyle"
                        android:maxLines="1"
                        android:inputType="text"
                        android:maxLength="25"
                        android:id="@+id/budgetNameEditText"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                >
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/HeadingTextStyle"
                        android:paddingEnd="5dp"
                        android:text="@string/amount_label"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/asterisk"
                        android:textSize="16sp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:textColor="@color/expenseColour"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/budgetAmountTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/budgetAmountEditText"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/baseline_currency_rupee_24"
                        android:drawableTint="@color/headingTextColor"
                        android:inputType="numberDecimal"
                        android:maxLength="13"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/HeadingTextStyle"
                        android:paddingEnd="5dp"
                        android:text="@string/category"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/asterisk"
                        android:textSize="16sp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:textColor="@color/expenseColour"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/budgetCategoryTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:clickable="true"
                    app:errorEnabled="true"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/budgetCategoryEditText"
                        android:layout_width="match_parent"
                        style="@style/TextStyle"
                        android:cursorVisible="false"
                        android:focusable="true"
                        android:maxLines="1"
                        android:drawableTint="@color/headingTextColor"
                        android:drawableEnd="@drawable/selection_arrow"
                        android:focusableInTouchMode="false"
                        android:clickable="true"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center"
                android:layout_margin="64dp"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
